--- a/Source/Blazorise.Material/wwwroot/blazorise.material.css
+++ b/Source/Blazorise.Material/wwwroot/blazorise.material.css
@@ -241,7 +241,7 @@ body :is(:hover, :focus)::-webkit-scrollbar-thumb {
   border-radius: 1rem;
 }
 
-* + :is(address, article, blockquote, code, .field, .mui-field, fieldset, form, .grid, .mui-grid, h1, h2, h3, h4, h5, h6, nav, ol, p, pre, .row, .mui-row, section, aside, table, .tabs, ul) {
+* + :is(address, article, blockquote, code, .field, .mui-field, .mui-fields, fieldset, form, .grid, .mui-grid, h1, h2, h3, h4, h5, h6, nav, ol, p, pre, .row, .mui-row, section, aside, table, .tabs, ul) {
   margin-block-start: 1rem;
 }
 
@@ -1280,8 +1280,45 @@ body :is(:hover, :focus)::-webkit-scrollbar-thumb {
   border-radius: 0.25rem 0.25rem 0 0;
 }
 
-.mui-field.mui-row {
+.mui-field.mui-field-horizontal {
+  display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.mui-field.mui-field-horizontal:has(> .mui-column),
+.mui-field.mui-field-horizontal:has(> [class*=mui-column-]) {
+  margin-right: calc(1rem * -0.5);
+  margin-left: calc(1rem * -0.5);
+}
+
+.mui-row > .mui-field {
+  margin-top: 0;
+}
+
+.mui-fields-inline {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+.mui-fields-inline > .mui-field {
+  margin-top: 0;
+}
+@media (min-width: 600px) {
+  .mui-fields-inline > .mui-field {
+    display: flex;
+    flex: 0 0 auto;
+    flex-flow: row wrap;
+    align-items: center;
+    margin-bottom: 0;
+  }
+  .mui-fields-inline > .mui-field > .mui-field-label:not(.mui-field-label-horizontal) {
+    margin-bottom: 0;
+  }
+  .mui-fields-inline > .mui-field > :is(.mui-input, .mui-input-plaintext, .mui-select, .mui-addons, .b-numeric),
+  .mui-fields-inline > .mui-field > .mui-field-body > :is(.mui-input, .mui-input-plaintext, .mui-select, .mui-addons, .b-numeric) {
+    inline-size: auto;
+  }
 }
 
 .mui-field > .mui-field-body {
@@ -5629,15 +5666,15 @@ span.flatpickr-weekday {
   --_gap: 1rem;
   display: flex;
   flex-wrap: wrap;
-  margin-right: calc(var(--_gap) * -1);
-  margin-left: calc(var(--_gap) * -1);
+  margin-right: calc(var(--_gap) * -0.5);
+  margin-left: calc(var(--_gap) * -0.5);
 }
-.mui-row .mui-nogutters {
+.mui-row.mui-nogutters {
   margin-right: 0;
   margin-left: 0;
 }
-.mui-row .mui-nogutters > .mui-column,
-.mui-row .mui-nogutters > [class*=mui-column-] {
+.mui-row.mui-nogutters > .mui-column,
+.mui-row.mui-nogutters > [class*=mui-column-] {
   padding-right: 0;
   padding-left: 0;
 }
